--- a/tailwind-init.css
+++ b/tailwind-init.css
@@ -86,7 +86,7 @@
 }
 
 .card1, .card2, .card3, .card4, .card5, .card6, .card7, .card8{
-    width: 270px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -111,9 +111,53 @@
     padding: 20px;
     border: none;
 }
+
+.Flower-section{
+    display: flex;
+    flex-direction: row-reverse;
+    margin: 210px auto;
+    justify-content: center;
+}
+
+.flower-text{
+    margin: 0 60px;
+    max-width: 540px;
+    padding: 20px;
+}
+
+.Flower-title{
+    font-size: 60px;
+}
+
+.flower-list{
+    padding: 20px;
+}
+
+.Flower-text{
+    color: rgba(0, 0, 0, 0.5);
+    margin: 20px 0px;
+    font-size: 20px;
+}
+
+.Flower-image{
+    width: 100%;
+}
+
+.Badge{
+    width: 286px;
+    position: relative;
+    margin-bottom: 500px;
+}
+
+
 @media screen and (max-width: 768px) {
+    .nav-bar{
+        display: flex;
+        align-items: center;
+    }
+    
     .logo{
-        width: 63px;
+        width: 60%;
 
     }
 
@@ -133,11 +177,76 @@
     .banner{
         display: flex;
         flex-direction: column-reverse;
-        margin-top: 150px;
+        margin-top: 50px;
         padding: 0%;
+        margin-bottom: 0px;
     }
 
     .banner-image{
         width: 100%;
+    }
+
+    .main{
+        max-width: 393px;
+        margin: 65px auto;
+    }
+   
+    .Title, .Orange{
+        margin-top: 0px;
+    }
+
+    .market-section{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        max-width: 363px;
+        padding: ;
+        margin: ;
+        text-align: center;
+    }
+    
+    .card-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        max-width: 363px;
+    }
+
+    .item-pic{
+        width: 100%;
+    }
+    
+    .Flower-section{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        margin: 20px;
+    }    
+    
+    .Badge{
+        display: none;
+    }
+
+    .flower-text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: left;
+        margin-top: 20px;
+        margin: auto;
+    }
+
+    .Flower-title{
+      font-size: 40px;
+      padding: auto;
+    }
+    
+    .Flower-list{
+      padding: 0px;
+      margin: 10px;
+    }
+
+    .Flower-text{
+        font-size: 15px;
     }
 }
