--- a/tailwind-init.css
+++ b/tailwind-init.css
@@ -1,4 +1,29 @@
 /*@import "Tailwind"*/
+* {
+    
+
+}
+
+body{
+    margin: 0%;
+}
+
+.noto-serif {
+  font-family: "Noto Serif", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+.inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
 .header{
 
 }
@@ -102,11 +127,13 @@
 
 .item-name{
     margin-top: 20px;
+    font-weight: 500;
 }
 
 .price{
     margin-top: 0px;
     font-size: 1.5rem;
+    font-weight: 700;
 }
 
 .sale-button{
@@ -305,6 +332,7 @@
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
+    margin-bottom: 50px;
 }
 
 .left-side{
@@ -341,6 +369,7 @@
     .nav-bar{
         display: flex;
         align-items: center;
+        margin-bottom: 20px;
     }
     
     .logo{
@@ -377,6 +406,7 @@
     .banner-image{
         width: 100%;
         margin-bottom: 20px;
+
     }
 
     .main{
@@ -427,7 +457,7 @@
     }
 
     .Flower-title{
-      font-size: 2rem;
+      font-size: 1.5rem;
       white-space: nowrap;
       margin: 0%;
       
@@ -454,15 +484,15 @@
     }
     
     .img-text-zabo{
-        top: 500px;
-        left: 100px;
-        font-size: 1.2rem;
+        top: 480px;
+        left: 70px;
+        font-size: 1.5rem;
     }
 
     .img-text-zabo-underline{
         top: 530px;
         left: 140px;
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
 
     .latest-img{
@@ -494,7 +524,7 @@
     .footer{
         display: flex;
         flex-direction: column;
-        margin-left: 20px;
+        margin-left: 10px;
     }
 
 
