--- a/tailwind-init.css
+++ b/tailwind-init.css
@@ -290,7 +290,7 @@ body{
 }
 
 .search{
-    background-image: url(/assets/news-letter-bg.png);
+    background-image: url(assets/news-letter-bg.png);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
